# pytimings

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  AGENTS.md  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dependencies.py  pyproject.toml  requirements-ci.txt  requirements-optional.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup_pytest_env/: action.yml
.github/workflows/: black.yml  deploy.yml  docs.yml  git_checks.yml  linter.yml  process_linter_results.yml  sanity_checks.yml  test.yml  test_deploy.yml  test_mpi.yml
docs/: .gitignore  Makefile  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
docs/_templates/autoapi/python/: module.rst
docs/examples/: basic.md  extra_data.md  plotting.md  scopes_and_decorators.md
examples/: plotting.ipynb  scopes_and_decorators.ipynb
pytimings/: __init__.py  _version.py  cli.py  mpi.py  processing.py  timer.py  tools.py
pytimings/plotting/: colors.py  fem.py  fem_vs_msfem_analysis.py  mlmc.py  msfem.py  msfem_scaleup.py  pad_rank_dir.py  pandas_common.py
scripts/: generate_speedup_data.py
tests/: __init__.py  conftest.py  fixtures.py  output.py  test_colors.py  test_example_data.py  test_output.py  test_pad.py  test_pytimings.py
tests/data/: nested.mpi_False.pickle  nested.mpi_True.pickle  nested.pickle
tests/output/: test_output_simple_False_.txt  test_output_simple_True_.txt
tests/test_output/: test_output_all_measures_False__r1.txt  test_output_all_measures_True__r1.txt  test_output_all_measures_True__r2.txt  test_output_per_rank_False_.txt  test_output_per_rank_True_.txt  test_output_simple.txt  test_output_simple_False_.txt
