[build-system]
requires = ["packaging", "setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytimings"
dynamic = ["version"]
description = "MPI Aware section timings"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Rene Fritze", email = "coding@fritze.me" }]
keywords = ["pytimings"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies = [
    "jupytext",
    "matplotlib",
    "packaging",
    "pandas",
    "psutil",
    "rich",
    "typer",
]

[project.optional-dependencies]
ci = [
    "check-manifest",
    "codecov",
    "docutils",
    "numpy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "pytest-memprof",
    "pytest-pycharm",
    "pytest-regressions",
    "pytest-timeout",
    "pytest-xdist",
    "readme_renderer[md]",
    "rstcheck",
    "ruff",
    "twine",
]
docs = [
    "myst-nb>=0.14.0",
    "python-slugify",
    "sphinx",
    "sphinx-autoapi>=1.8",
]
full = [
    "check-manifest",
    "codecov",
    "docutils",
    "mpi4py",
    "myst-nb>=0.14.0",
    "numpy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "pytest-memprof",
    "pytest-pycharm",
    "pytest-regressions",
    "pytest-timeout",
    "pytest-xdist",
    "python-slugify",
    "readme_renderer[md]",
    "rstcheck",
    "ruff",
    "sphinx",
    "sphinx-autoapi>=1.8",
    "twine",
]

[project.scripts]
pytimings = "pytimings.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pytimings", "pytimings.*"]

[tool.setuptools.dynamic]
version = { attr = "pytimings.__version__" }

[tool.ruff]
extend-exclude = ["pytimings/_version.py"]

[tool.ruff.lint]
extend-ignore = [
    "PLC0415",  # Import outside top-level (intentional lazy imports)
    "UP031",    # Use format specifiers (in versioneer-generated code)
]
