[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4,<0.5"]
build-backend = "hatchling.build"

[project]
name = "pytimings"
dynamic = ["version"]
description = "Section timings"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Rene Fritze", email = "coding@fritze.me" }]
keywords = ["pytimings"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.13"
dependencies = [
    "psutil",
    "rich",
]

[project.optional-dependencies]
plot = [
    "matplotlib",
    "pandas",
]
notebook = [
    "jupytext",
]
docs = [
    "pytimings[notebook,plot]",
    "myst-nb>=0.14.0",
    "python-slugify",
    "sphinx",
    "sphinx-autoapi>=1.8",
]
dev = [
    "check-manifest",
    "codecov",
    "docutils",
    "mypy",
    "numpy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "pytest-regressions",
    "pytest-timeout",
    "pytest-xdist",
    "readme_renderer[md]",
    "rstcheck",
    "ruff",
    "twine",
]
full = [
    "pytimings[plot,notebook,docs,dev]",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pytimings"]

[tool.pytest.ini_options]
addopts = "--cov=pytimings --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["pytimings", "tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
